# Sistema-cerradura-con-RFID

./: .gitignore  CMakeLists.txt  ESP32DevKitV1_Controlador_Cliente_http.ino  README.md  recieveArduino.py
Documentacion/: default.md  readme.md  timeline.md
conexion_cliente_servidor_http/: ESP32DevKitV1_Controlador_Cliente_http.ino  requirements.txt
conexion_cliente_servidor_http/web_api/: database.py  main.py
conexion_cliente_servidor_http/web_api/src/: __init__.py  app.py  app_prototype.py  database.py
conexion_cliente_servidor_http/web_api/src/templates/: access_log.html  add_door.html  add_user.html  base.html  doors.html  edit-door.html  edit-user.html  main_page.html  users.html
conexion_cliente_servidor_http/web_api_v2/: main.py
conexion_cliente_servidor_http/web_api_v2/src/: __init__.py
conexion_cliente_servidor_http/web_api_v2/src/api/: __init__.py  doors.py  users.py
conexion_cliente_servidor_http/web_api_v2/src/ui/: __init__.py  (+2 more)
conexion_entre_arduinos_RF24/NodoPuertaEstable/: NodoPuertaEstable.ino
conexion_entre_arduinos_RF24/NodoServidorEstable/: NodoServidorEstable.ino
final/NodoPuerta/: NodoPuerta.ino
final/ServidorRecibidor/: ServidorRecibidor.ino
net_examples/: HandControllerVeroboard.ino  TrackControlProMicroTA8428K.ino
proyectoEmisorRF24/: proyectoEmisorRF24.ino
prueba_1/NodoPuerta/: NodoPuerta.ino
prueba_1/NodoServidor/: NodoServidor.ino
prueba_2/NodoPuerta/: NodoPuerta.ino
prueba_2/NodoServidor/: NodoServidor.ino
prueba_3_estable/NodoPuertaEstable/: NodoPuertaEstable.ino
receptor/: receptor.ino
web_api/: app.py
(+6 files in other folders)
